[package]
name = "makepad-example-chatgpt"
version = "1.0.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Makepad simple example"
license = "MIT OR Apache-2.0"
metadata.makepad-auto-version = "BkQvnL-yt07_4n3oopSxq7yCP_w="

[dependencies]
makepad-widgets = { path = "../../widgets", version = "1.0.0" }
makepad-micro-serde = { path = "../../libs/micro_serde", version = "1.0.0" }
makepad-micro-serde-derive = { path = "../../libs/micro_serde/derive", version = "1.0.0" }