[package]
name = "cmdline_example"
version = "0.1.0"
edition = "2018"

[dependencies]
#serde_json = "1.0"
#serde = { version = "1.0", features = ["derive"] }
#ron = "*"
time = "*"

[dependencies.makepad-live-macros] 
path="../../render/live_macros"

[dependencies.makepad-shader-compiler] 
path="../../render/shader_compiler"
