[package]
name = "makepad-example-cmdline"
version = "0.3.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2018"
description = "Makepad cmdline example"
license = "MIT OR Apache-2.0"
metadata.makepad-auto-version = "MWwHZkXy15VfJLvQ2nKLG37W_rY="

[dependencies]
makepad-error-log = {path="../../libs/error_log", version="0.3.0"}

[features]
nightly = ["makepad-error-log/nightly"]
