[package]
name = "makepad-example-comfyui"
version = "0.1.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2018"
description = "Makepad comfyUI example"
license = "MIT OR Apache-2.0"
metadata.makepad-auto-version = "5POKajmZt90sjG2MIw5C9dizbBo="

[dependencies]
makepad-widgets = { path = "../../widgets", version = "0.3.0" }
makepad-micro-serde = { path = "../../libs/micro_serde", version = "0.3.0" }
makepad-micro-serde-derive = { path = "../../libs/micro_serde/derive", version = "0.3.0" }
