[package]
name = "makepad-example-fractal-zoom"
version = "0.5.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Makepad fractal zoom example"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/makepad/makepad/"
repository = "https://github.com/makepad/makepad/"
metadata.makepad-auto-version = "-HQyt_6S4hcP4_ja_KDjE6dYxko="

[dependencies]
makepad-widgets = {path="../../widgets", version="0.5.0"}


