[package]
name = "makepad-example-fractal-zoom"
version = "1.0.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Makepad fractal zoom example"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/makepad/makepad/"
repository = "https://github.com/makepad/makepad/"
metadata.makepad-auto-version = "m2bMNPHmSqBhl6ObExHS84DZSF4="
metadata.makepad-check-nightly-only = true

[dependencies]
makepad-widgets = {path="../../widgets", version="1.0.0"}



