[package]
name = "fun_audio"
version = "0.1.0"
authors = ["makepaddev"]
edition = "2018"

[dependencies]
makepad-component = { path = "../../component", version = "0.1" }
makepad-media = { path = "../../media", version = "0.1" }

[features]
nightly = ["makepad-component/nightly", "makepad-media/nightly"]

