[package]
name = "makepad-example-fun-audio"
version = "0.1.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2018"
description = "Makepad fun audio example"
license = "MIT OR Apache-2.0"
metadata.makepad-auto-version = "VIAnc08AynpSRwJKkSvBcF1JWy8="

[dependencies]
makepad-component = { path = "../../component", version = "0.1.0" }
makepad-media = { path = "../../media", version = "0.1.0" }
makepad-miniz = { path = "../../libs/miniz", version = "0.1.0" }
makepad-base64 = { path = "../../libs/base64", version = "0.1.0" }

[features]
nightly = ["makepad-component/nightly", "makepad-media/nightly"]

